--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,9 @@ html,
 body {
     scroll-behavior: smooth;
     font-family: "Geist", sans-serif;
+    background-color: #F8FAFC;
 }
 .container{
     max-width: 1110px;
+    margin: 0 auto;
 }
