--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,3 +19,18 @@ body {
     max-width: 1110px;
     margin: 0 auto;
 }
+
+.tab_btn.active{
+    background: var(--primary);
+    color: white;
+}
+.tab_btn.active:hover{
+    background: var(--primary);
+    color: white;
+}
+
+
+.delate__icon:hover img {
+    filter: brightness(0) invert(1);
+    border-color: transparent;
+}
